# The-ClinicalBridge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: patients.json
data/anamnesis/: .gitkeep  PT-001.json  PT-002.json  PT-003.json  PT-004.json  PT-005.json  PT-006.json  PT-007.json  PT-008.json  PT-009.json  PT-010.json  PT-011.json  PT-012.json
data/ehr/: .gitkeep  PT-001.json  PT-002.json  PT-003.json  PT-004.json  PT-005.json  PT-006.json  PT-007.json  PT-008.json  PT-009.json  PT-010.json  PT-011.json  PT-012.json
data/rpm/: .gitkeep  PT-001.json  PT-002.json  PT-003.json  PT-004.json  PT-005.json  PT-006.json  PT-007.json  PT-008.json  PT-009.json  PT-010.json  PT-011.json  PT-012.json
data/scenarios/: .gitkeep  conflicting_data.json  index.json  (+4 more)
docs/: 01_model_selection.md  02_application_design.md  03_prompt_library.md  04_workflows.md  05_testing.md  06_langchain_rag.md  07_agents_memory_tools.md  08_multiagent.md  PORTFOLIO.md  README.md  ethics_and_limitations.md  evaluation_results.md  final_report.md  prompt_iteration_log.md
scripts/: build_docx.py  build_static_api.py  build_vectorstore.py  build_web_cache.py  generate_dataset.py  generate_scenarios.py  run_demo.py  run_eval.py
tests/: conftest.py  test_anamnesis_agent.py  test_datagen.py  test_ehr_agent.py  test_evaluation.py  test_llm.py  test_memory.py  test_orchestrator.py  test_prompts.py  test_rag.py  test_scenarios_data.py  test_schemas.py  test_smoke.py  test_synthesis_agent.py  test_tools.py  test_triage.py  test_web_api.py
web/: README.md  __init__.py
(+72 files in other folders)
